@@ -1,3 +1,13 @@
+2010-04-22  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=38012
+        REGRESSION: Ctrl- and Option- shortcuts get wrong keyCode on non-QWERTY keyboard
+
+        * platform/mac/KeyEventMac.mm: (WebCore::windowsKeyCodeForKeyEvent): Also look at unmodified
+        characters, to avoid falling through to virtual key code lookup for Roman characters.
+
 2010-04-22  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
 
         Reviewed by Darin Adler.
